fix comment overflow and width problems, fix scrollbar overhang

--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -4,6 +4,7 @@ section#most-recent {
   background: white;
   width: 1200px;
   margin-top: 46px;
+  padding-bottom: 80px;
 }
 
 h1#new-tracks-header {
